# ccad-itsd-agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.py  pyproject.toml  server.py
data/: README.md  index_kb.py
docs/: RAG v3.xlsx  Solutions_IT.xlsx  architecture.md  deployment.md  scope-gap-analysis.md
frontend/: Containerfile  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/components/: ChatWindow.jsx  InputBar.jsx  MessageBubble.jsx  Sidebar.jsx  TicketFormBubble.jsx
frontend/src/styles/: main.css
frontend/src/utils/: api.js
infra/: app.bicep  main.bicep  main.bicepparam
infra/modules/: ai-foundry.bicep  ai-search.bicep  communication-services.bicep  cosmos-db.bicep  key-vault.bicep  monitoring.bicep
kb/: README.md  priority.py  solutions_kb.xlsx
mock_mcp/: server.py
scripts/: deploy-app.sh
skills/non-it-routing/: SKILL.md
skills/ticket-creation/: SKILL.md
skills/ticket-creation/references/: business-rules.md  categories.md  resolver-groups.md
src/: agent.py  config.py  devui_app.py  server.py
src/kb/: README.md  index_kb.py  priority.py  search.py
src/skills/clinical-triage/: SKILL.md
src/skills/ticket-creation/: SKILL.md
src/skills/ticket-management/: SKILL.md
src/voice/: README.md  __init__.py  handler.py  routes.py
teams-app/: README.md  manifest.json
tests/: test_eval.py  test_mcp_tools.py
tools/: __init__.py
voice/: handler.py  routes.py
