[project]
name = "ccad-itsm-agent"
version = "0.1.0"
description = "Clinical ITSM Agent — KB-first triage with ManageEngine via MCP"
requires-python = ">=3.11"
dependencies = [
    "agent-framework-core>=1.3.0",
    "agent-framework-foundry>=1.3.0",
    "agent-framework-azure-ai-search>=1.0.0b1",
    "mcp>=1.24.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "azure-identity>=1.17",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "azure-communication-callautomation>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
mock = [
    "mcp>=1.24.0",
]

[tool.setuptools]
py-modules = ["agent", "config", "server", "call_handler"]
packages = ["kb", "mock_mcp", "tests"]
